Defect fix - DoubleWideCard, remove gap between image and block with texts

--- a/less/components/consonant/cards/double-wide.less
+++ b/less/components/consonant/cards/double-wide.less
@@ -19,10 +19,6 @@
         overflow: hidden;
 
         &-img {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
             height: @consonant-DoubleWideCard-imgHeight;
             background-position: 50% 0;
             background-size: cover;
@@ -30,6 +26,7 @@
         }
 
         &-inner {
+            flex-grow: 1;
             display: flex;
             flex-direction: column;
             padding: 16px 24px 28px;
@@ -76,12 +73,17 @@
         }
 
         &--contentTop &-img {
-            height: auto;
-            bottom: 0;
+            flex-grow: 1;
         }
 
         &--contentTop &-inner {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            padding-top: 24px;
             background-color: transparent;
+            z-index: 1;
         }
 
         @media @consonant-desktop-up {
